[package]
name = "new_chat"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
gotham = "0.4.0"
hyper = "0.12.35"
rayon = "1.2.0"
futures = "0.1.29"
gotham_derive = "0.4.0"
mime = "0.3.14"
base64 = "0.10.1"
hashbrown = {version = "0.6.1", features = ["rayon"]}
jemallocator = "0.3.2"
lazy_static = "1.4.0"
serde_json = "1.0"
simd-json = "0.1.26"
chrono = "0.4.9"
cookie = "0.12.0"
tokio = "0.2.0-alpha.6"
serde = {version = "1.0.101", features = ["derive"]}